--- a/src/components/SidebarOption.css
+++ b/src/components/SidebarOption.css
@@ -1,4 +1,6 @@
 .sidebarOption {
+  display: flex;
+  align-items: center;
   color: grey;
   height: 40px;
   cursor: pointer;
@@ -6,4 +8,20 @@
 }
 .sidebarOption:hover {
   color: #ffffff;
+}
+
+.sidebarOption__icon {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.sidebar > hr {
+  border: 1px solid #282828;
+  width: 90%;
+  margin: 10px auto;
+}
+
+.sidebarOption > p {
+  margin-top: 10px;
+  margin-left: 20px;
+  font-size: 14px;
 }
